<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <!-- ViewModel or other data binding variables can be declared here -->
    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".fragments.PasswordFragment">

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppHeadCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/xx_large"
            android:layout_marginTop="@dimen/large"
            android:layout_marginEnd="@dimen/xx_large"
            android:text="@string/create_an_account"
            android:textColor="?colorPrimary" />

        <com.google.android.material.textview.MaterialTextView
            style="@style/TextAppSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/large"
            android:text="@string/create_account_message"
            android:textAlignment="center" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/large"
                tools:context=".fragments.UserFragmentOne">

                <!-- Confirm Details Text -->
                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/confirm_details"
                    style="@style/TextAppMediumBold"
                    android:layout_marginBottom="@dimen/large" />

                <!-- First Name Field (non-editable) -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    style="@style/TextAppSmall"
                    android:textStyle="bold"
                    android:text="@string/first_name_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Last Name Field (non-editable) -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textLastName"
                    android:textColor="@color/black"
                    style="@style/TextAppSmall"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/last_name_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Email Field (non-editable) -->
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textEmail"
                    android:textColor="@color/black"
                    style="@style/TextAppSmall"
                    android:textStyle="bold"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small"
                    android:text="@string/email_label"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <!-- Password Fields -->
                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:layout_marginTop="@dimen/xx_large"
                    android:text="@string/password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputPassword"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:visibility="gone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppHeadingMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/large"
                    android:visibility="gone"
                    android:text="@string/confirm_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputConfirmPassword"
                    style="@style/TextInputOutlined"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password_hint"
                        android:visibility="gone"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <!-- Submit Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/buttonSubmit"
                    style="@style/ButtonStyleDark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/xx_large"
                    android:layout_marginBottom="@dimen/full"
                    android:text="@string/text_submit" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>
