<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.dkglabs.auth.fragments.OtpFragment">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppHeadCenter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/xx_large"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="@dimen/xx_large"
                android:text="@string/otp_verification"
                android:textColor="?colorPrimary" />


            <com.google.android.material.textview.MaterialTextView
                style="@style/TextAppSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/large"
                android:text="@string/otp_verification_msg"
                android:textAlignment="center" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textViewPhone"
                style="@style/TextAppHeadingSemiBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/xx_large"
                android:hint="@string/hint_phone"
                android:letterSpacing="0.2"
                android:padding="@dimen/extra_small" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/not_you" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewChange"
                    style="@style/TextAppAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small"
                    android:text="@string/change"
                    android:textColor="?colorPrimary" />
            </LinearLayout>

            <in.aabhasjindal.otptextview.OtpTextView
                android:id="@+id/otpView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/large"
                android:fontFamily="monospace"
                app:bar_active_color="?colorOnSurfaceVariant"
                app:bar_enabled="false"
                app:bar_error_color="@color/red"
                app:bar_height="0dp"
                app:bar_inactive_color="@color/white"
                app:bar_margin="@dimen/medium"
                app:bar_margin_bottom="0dp"
                app:bar_success_color="?colorTertiaryContainer"
                app:box_margin="0dp"
                app:height="50dp"
                app:hide_otp="false"
                app:length="6"
                app:otp_box_background="@drawable/otp_bg"
                app:otp_box_background_active="@drawable/otp_bg"
                app:otp_box_background_error="?colorError"
                app:otp_box_background_inactive="@drawable/otp_bg"
                app:otp_box_background_success="?colorSecondary"
                app:otp_text_size="@dimen/text_24"
                app:width="45dp" />

            <LinearLayout
                android:id="@+id/llResend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/large"
                android:orientation="horizontal"
                android:visibility="invisible">

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/did_not_receive_otp" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textViewResend"
                    style="@style/TextAppAction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small"
                    android:text="@string/resend"
                    android:textColor="?colorPrimary" />
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonVerifyOtp"
                style="@style/ButtonStyleDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/full"
                android:layout_marginBottom="@dimen/full"
                android:text="@string/text_submit" />
        </LinearLayout>
    </ScrollView>
</layout>